@@ -45,7 +45,7 @@ my %WriteMakefileArgs = (
     "ExtUtils::MakeMaker" => 0,
     "File::Spec" => 0,
     "JSON::MaybeXS" => 0,
-    "Path::Tiny" => 0,
+    "Path::Tiny" => "0.054",
     "Sub::Defer" => 0,
     "Test::Deep" => 0,
     "Test::More" => "0.96",
@@ -73,7 +73,7 @@ my %FallbackPrereqs = (
   "Math::BigInt" => 0,
   "Module::Runtime" => 0,
   "Moo" => 0,
-  "Path::Tiny" => 0,
+  "Path::Tiny" => "0.054",
   "Scalar::Util" => 0,
   "Sub::Defer" => 0,
   "Sys::Hostname" => 0,
