@@ -2,6 +2,10 @@ Revision history for BSON
 
 {{$NEXT}}
 
+    [Testing]
+
+    - Require newer Path::Tiny with full-featured "basename" method.
+
 v0.999.2  2016-06-13 16:02:54-04:00 America/New_York (TRIAL RELEASE)
 
     [Added]
